# AxiomAI

./: .gitignore  ARCHITECTURE.md  AXIOM_STATUS.md  Changelog.md  NOTICE  README.md  Task.md  axiom_ai.desktop  export_engine.py  fix_tests.py  fix_tests2.py  main.py  package-lock.json  publish_engine.sh  pyproject.toml  refactor_tests.py  requirements-dev.txt  requirements.txt  run.bat  run.sh  test.bat  test.sh
axiom/: __init__.py  arbitrator.py  checkpoint.py  chronicler.py  compile.py  config.py  consolidate.py  db_helpers.py  decompile.py  dev.py  events.py  factextract.py  facts.py  fsutil.py  image_generator.py  library.py  localization.py  logger.py  memory.py  mental_models.py  mini_dico.py  missions.py  modifiers.py  multiplayer.py  observations.py  package.py  paths.py  populate.py  presets.py  prompts.py  reflect.py  regenerate.py  rules.py  saves.py  savestore.py  schema.py  session.py  textfmt.py  time_system.py  universe.py
core/: DEPRECATED.md  __init__.py  arbitrator.py  builtin_keys.py  bundled_universes.py  chronicler.py  config.py  localization.py  logger.py  multiplayer_queue.py  paths.py  st_parser.py  time_system.py
database/: DEPRECATED.md  backup_manager.py  checkpoint.py  event_sourcing.py  modifier_processor.py  schema.py
debug/: DEPRECATED.md  README.md  db_integrity.py  llm_test.py  run_step7_live.py  startup_check.py  test_audio_crossfade.py  test_audio_logic.py  test_db_logic.py  test_llm_logic.py  test_populate.py  test_populate_async.py  test_rules_logic.py  test_translations.py
docs/: conf.py  index.md  quickstart.md
landing/: build_site.py  dev-updates.html  feed.xml  index.html  styles.css
llm_engine/: DEPRECATED.md  gemini_client.py  ollama_client.py  prompt_builder.py  universal_client.py  vector_memory.py
maintenance/: AXIOM_AI_UPGRADE_DETAILS.md  DONE.md  PENDING.md  README.md
memory/: MEMORY.md  feedback_execution_style.md  feedback_maintenance_workflow.md  feedback_secrets_handling.md  feedback_surgical_edits.md  feedback_user_handles_git.md  project_beta_launch.md  project_blog.md  project_doc_chantier.md  project_engine_split_strategy.md  project_hindsight_mining.md  project_parallel_dev_handover.md  (+4 more)
(+482 files in other folders)
